<?xml version="1.0" encoding="UTF-8"?>
<!--suppress VulnerableLibrariesLocal -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.yulichang</groupId>
        <artifactId>mybatis-plus-join-root</artifactId>
        <version>1.4.5</version>
    </parent>
    <version>1.4.5</version>
    <artifactId>mybatis-plus-join-core</artifactId>
    <name>mybatis-plus-join-core</name>

    <description>An enhanced toolkit of Mybatis-Plus to simplify development.</description>
    <url>https://github.com/yulichang/mybatis-plus-join</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>mybatis-plus-join</id>
            <name>yulichang</name>
            <email>yu_lichang@qq.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/yulichang/mybatis-plus-join.git</connection>
        <developerConnection>scm:git:https://github.com/yulichang/mybatis-plus-join.git</developerConnection>
        <url>https://github.com/yulichang/mybatis-plus-join</url>
    </scm>

    <properties>
        <jdkVersion>1.8</jdkVersion>
        <jdkVersion.test>1.8</jdkVersion.test>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <github.global.server>github</github.global.server>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.yulichang</groupId>
            <artifactId>mybatis-plus-join-annotation</artifactId>
            <version>1.4.5</version>
        </dependency>
        <dependency>
            <groupId>com.github.yulichang</groupId>
            <artifactId>mybatis-plus-join-adapter-v33x</artifactId>
            <version>1.4.5</version>
        </dependency>
        <dependency>
            <groupId>com.github.yulichang</groupId>
            <artifactId>mybatis-plus-join-adapter-v3431</artifactId>
            <version>1.4.5</version>
        </dependency>
        <dependency>
            <groupId>com.github.yulichang</groupId>
            <artifactId>mybatis-plus-join-adapter-v352</artifactId>
            <version>1.4.5</version>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-extension</artifactId>
            <version>3.5.3.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>5.3.23</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>1.8.21</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>


</project>
